[gd_scene load_steps=4 format=3 uid="uid://b527brjhiifok"]

[ext_resource type="Script" uid="uid://df1gt5gfbkuqu" path="res://Prefabs/hud.gd" id="1_g0xie"]
[ext_resource type="Script" uid="uid://bqdpnbx1m7iqk" path="res://Prefabs/game_over_popup.gd" id="1_s3bvw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6n2uh"]
bg_color = Color(0.651809, 0.180164, 0.651392, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="HUD" type="Node"]
script = ExtResource("1_g0xie")

[node name="ScoreP1" type="Label" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 77.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 32
text = "Score: 0"

[node name="ScoreP2" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -88.0
offset_top = 16.0
offset_right = -27.0
offset_bottom = 39.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "Score: 0"

[node name="GameOverPopup" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s3bvw")

[node name="ColorRect" type="ColorRect" parent="GameOverPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.713726)

[node name="Label" type="Label" parent="GameOverPopup/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -92.0
offset_right = 187.0
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Spieler 0 hat gewonnen!"

[node name="Button" type="Button" parent="GameOverPopup/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = 28.0
offset_right = 96.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_6n2uh")
text = "Neu starten"

[connection signal="start_new_game" from="GameOverPopup" to="." method="_on_game_over_popup_start_new_game"]
[connection signal="pressed" from="GameOverPopup/ColorRect/Button" to="GameOverPopup" method="_on_button_pressed"]
